--- a/style.css
+++ b/style.css
@@ -824,13 +824,13 @@ h4 {
 }*/
 
 .bg-banniere {
-    background-image: url("img/banniere.jpg");
+    background-image: url("img/banniere1.jpg");
     height: 450px;
     width: 100%;
 }
 
 .bg-presentation {
-    background-image: url("img/presentation.jpg");
+    background-image: url("img/presentation1.jpg");
 }
 
 @media (max-width: 1024px) {
