--- a/style.css
+++ b/style.css
@@ -831,6 +831,8 @@ h4 {
 
 .bg-presentation {
     background-image: url("img/presentation1.jpg");
+     height: 450px;
+    width: 100%;
 }
 
 @media (max-width: 1024px) {
