--- a/style.css
+++ b/style.css
@@ -554,6 +554,8 @@ a[data-lightbox]:hover::before {
     top: 50%;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
+    font-display: swap;
+    
 }
 
 a[data-lightbox]:hover img {
@@ -654,6 +656,9 @@ a {
     font-family: "helvetica";
     font-weight: 400;
     color: black;
+    font-display: swap;
+     
+
 }
 
 .container {
@@ -693,6 +698,8 @@ p {
 .h1 {
     font-size: 20px;
     font-family: "Open Sans";
+    font-display: swap;
+
 }
 
 .cta-hero {
